feat: add AuthTokenRequest route, sinuna implementations
