# src/utils/types.ts
@@ -1,0 +1,1 @@
+export type AppContext = { appName: string; redirectUrl: string; guid: string };
